# rust_by_example

ch1/: 1_2_1_debug.rs  1_2_2_display.rs  1_2_formatted_print.rs  1_hello.rs
ch10/: 10_3_the_use_declaration.rs
ch10_modules/: 10_1_visibility.rs  10_2_struct_visibility.rs  10_4_super_and_self.rs
ch11/: 11_1_creating_a_library.rs  11_2_using_a_library.rs
ch11_crates/: lib11_1_creating_a_library.rlib
ch12/: 12_2_conventions.txt
ch12/12_1_dependencies/foo/: Cargo.toml
ch12_cargo/: 12_3_testing.txt  12_4_build_scripts.txt
ch13/: 13_2_crates.rs  13_3_1_custom.rs  13_3_cfg.rs  13_attributes.rs
ch13_attributes/: 13_1_dead_code.rs  library.rlib
ch14_generics/: 14_1_functions.rs  14_2_implementation.rs  14_3_traits.rs  14_4_1_testcase_empty_bounds.rs  14_4_bounds.rs  14_5_multiple_bounds.rs  14_6_where_clauses.rs  14_7_new_type_idiom.rs  14_8_1_the_problem.rs  14_8_2_associated_types.rs  14_8_associated_items.rs  14_9_1_testcase_unit_clarification.rs  14_9_phantom_type_parameters.rs  14_generics.rs
ch15_scoping_rules/: 15_1_raii.rs  15_2_1_mutability.rs  15_2_2_partial_moves.rs  15_2_ownership_and_moves.rs  15_3_1_mutability.rs  15_3_2_aliasing.rs  15_3_3_the_ref_pattern.rs  15_3_borrowing.rs  15_4_1_explicit_annotation.rs  15_4_2_functions.rs  15_4_3_methods.rs  15_4_4_structs.rs  15_4_5_traits.rs  15_4_6_bounds.rs  15_4_7_coercion.rs  15_4_8_static.rs  15_4_9_elision.rs  15_4_lifetimes.rs
ch16_traits/: 16_1_derive.rs  16_2_returning_traits_with_dyn.rs  16_3_operator_overloading.rs  16_4_drop.rs  16_5_iterators.rs  16_6_impl_Trait.rs  16_7_clone.rs  (+3 more)
(+122 files in other folders)
