[package]
name = "foo" # name of project
version = "0.1.0" # crate version using semantic versioning
edition = "2021"
authors = ["joshfink"] # list of authors used

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.27.1" # from crates.io
rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
bar = { path = "../bar" } # from a path in the local filesystem